- fixed projector background memory leak - fixed media/BackgroundComponent video tag not refreshing with selected element - Word wraps in various places -

--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -123,3 +123,6 @@ textarea.epicTextArea{
   height: 200px;
 }
 
+.hardWrap{
+  word-wrap: break-word;
+}
